2006-06-21  Raivis Dejus  <orvils@gmail.com>

	* configure.in: Added Latvian 'lv' entry.

2006-06-20 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: finalized the order of operations when
	  performing a move.

2006-06-18 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: use new copy_block() in copy_filesystem()

2006-06-18 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc: renamed resize_partition to
	  resize_move_partition to better reflect its functionality.

2006-06-18 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc: did more work on moving

2006-06-18 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc,
	  src/Win_GParted.cc: some more cleanups, should be finished now :)

2006-06-17 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* restructured the core a bit, over time it had become very messy.

2006-06-17 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* more cleanups in the core and the fs'es (these changelogs are
	  getting boring ;^) )

2006-06-17 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* cleanups in the core and the fs'es (resize)

2006-06-17 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* cleanups in the core and the fs'es (check/repair)

2006-06-17 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* src/GParted_Core.cc: use new create_filesystem() in format()

2006-06-17 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* cleanups in the core and the fs'es (create)

2006-06-04 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: removed 'EXPERIMENTAL' from move-message to
	  prevent incorrect translations.

2006-05-31 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc,
	  src/ext2.cc: added movesupport, atm in experimental state and needs
	  lots of cleaning. only enabled for ext2, but should work for all
	  filesystems.