@@ -1,3 +1,8 @@
+2006-06-20 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* src/GParted_Core.cc: some more work on the order of operations when
+	  performing a move (made use of maximize_filesystem() ).
+
 2006-06-21  Raivis Dejus  <orvils@gmail.com>
 
 	* configure.in: Added Latvian 'lv' entry.
